# imitation_learning_autorally

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  README.rst  package.xml  setup.py
config/: Marietta_sim  Marietta_sim_light
launch/: autorally_mppi.launch  keyboard.launch  mppi.launch  single_proc.launch  single_proc_gazebo.launch
scripts/: autorally_environment.py  autorally_expert_mppi.py  ex_autorally_mppi.py  nn.py  ros_util.py
tests/: imports.py
